--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,24 +10,27 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v4
+        uses: actions/checkout@v2
 
-      - name: Setup jdk
-        uses: actions/setup-java@v4
+      - name: Set up JDK 21
+        uses: actions/setup-java@v2
         with:
-          java-version: 21
+          java-version: '21'
           distribution: 'temurin'
 
-      - name: Setup Gradle
-        uses: gradle/actions/setup-gradle@v3
+      - name: Set up Gradle
+        uses: gradle/gradle-build-action@v2
         with:
-          validate-wrappers: true
+          gradle-version: '8.5'
 
       - name: Build with Gradle
         run: ./gradlew build
 
-      - name: Upload GitHub release
-        uses: AButler/upload-release-assets@v2.0
+      - name: Upload artifacts to GitHub Release
+        uses: softprops/action-gh-release@v1
         with:
-          files: 'build/libs/*.jar;!build/libs/*-sources.jar;!build/libs/*-dev.jar'
-          repo-token: ${{ secrets.GITHUB_TOKEN }}
+          tag_name: ${{ github.event.release.tag_name }}
+          files: |
+            build/libs/*.jar
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
