--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,6 +5,11 @@ on:
     types:
       - published
 
+permissions:
+  contents: read
+  packages: write
+  deployments: write
+
 jobs:
   upload:
     runs-on: ubuntu-latest
