--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,37 +5,27 @@ on:
     types:
       - published
 
-permissions:
-  contents: read
-  packages: write
-  deployments: write
-
 jobs:
-  upload:
+  build:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
-
-      - name: Set up JDK 21
-        uses: actions/setup-java@v2
-        with:
-          java-version: '21'
-          distribution: 'temurin'
-
-      - name: Set up Gradle
-        uses: gradle/gradle-build-action@v2
-        with:
-          gradle-version: '8.5'
-
-      - name: Build with Gradle
-        run: ./gradlew build
-
-      - name: Upload artifacts to GitHub Release
-        uses: softprops/action-gh-release@v1
-        with:
-          tag_name: ${{ github.event.release.tag_name }}
-          files: |
-            build/libs/*.jar
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    - name: Checkout sources
+      uses: actions/checkout@v4
+    - name: Setup Java
+      uses: actions/setup-java@v4
+      with:
+        distribution: 'temurin'
+        java-version: 21
+    - name: Setup Gradle
+      uses: gradle/actions/setup-gradle@v4
+    - name: Build with Gradle
+      run: ./gradlew build
+  upload:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+    - name: Upload GitHub release
+      uses: AButler/upload-release-assets@v3.0
+      with:
+        files: 'build/libs/*.jar;!build/libs/*-dev.jar'
+        repo-token: ${{ secrets.GITHUB_TOKEN }}
