--- a/gradle.properties
+++ b/gradle.properties
@@ -2,18 +2,18 @@ org.gradle.jvmargs=-Xmx2G
 org.gradle.parallel=true
 
 # Mod properties
-mod_version=1.1.2
-maven_group=cc.tweaked_programs
+mod_version=1.2.0
+maven_group=dev.kleinbox
 archives_base_name=partnership
 
 # Fabric properties
-minecraft_version=1.20.4
-loader_version=0.15.1
-fabric_kotlin_version=1.10.17+kotlin.1.9.22
+minecraft_version=1.21.1
+loader_version=0.16.10
+fabric_kotlin_version=1.13.1+kotlin.2.1.10
+parchment_version=2024.11.17
 
 # Dependencies
-fabric_version=0.91.2+1.20.4
-modmenu_version=9.0.0-pre.1
-emi_version=1.0.29+1.20.4+fabric
-sodium_version=mc1.20.3-0.5.5
-boatism_version=0.1.1
+fabric_version=0.115.1+1.21.1
+modmenu_version=11.0.3
+emi_version=1.1.20+1.21.1
+sodium_version=mc1.21.1-0.6.9
