--- a/gradle.properties
+++ b/gradle.properties
@@ -2,7 +2,7 @@ org.gradle.jvmargs=-Xmx2G
 org.gradle.parallel=true
 
 # Mod properties
-mod_version=1.3.0-beta
+mod_version=1.3.0
 maven_group=dev.kleinbox
 archives_base_name=partnership
 
